이미지 파일 수정(추가) 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                 <textarea class="field" placeholder="무슨 일이 일어나고 있나요?" name="content" id="content" cols="30" rows="1"></textarea>
                 <div class="row row-cols-4 imageContainer" id="imageContainer"></div>
                 <div id="fileContainer"></div>
-                <i class="xi-image xi-x" onclick="imageInput();"></i>
+                <i class="xi-image xi-x" onclick="imageInput('imageContainer', 'fileContainer');"></i>
                 <i class="xi-paperclip xi-x" onclick="fileInput()"></i>
                 <button type="submit">
                     <img class="send-img" src="/img/send.png" alt="">
@@ -78,8 +78,8 @@
                         </div>
                         <!-- 버튼 영역-->
                         <div class="footer">
-                            <i id="<%= memo.id %>-image" class="xi-image xi-x" onclick="addImage('<%=memo.id %>-imageContainer')"></i>
-                            <i id="<%= memo.id %>-file" class="xi-paperclip xi-x"></i>
+                            <i id="<%= memo.id %>-image" class="xi-image xi-x" onclick="imageInput('<%= memo.id %>-imageContainer', '<%= memo.id %>-fileContainer', '<%= memo.id %>');"></i>
+                            <i id="<%= memo.id %>-file" class="xi-paperclip xi-x" onclick="fileInput()"></i>
                             <i id="<%= memo.id %>-bookmark" class="xi-star-o xi-x" onclick="bookmark('<%= memo.id %>')" 
                                 style="display: <%= memo.bookmark ? 'none' : 'block' %>;"></i>
                             <i id = "<%=memo.id %>-unbookmark" class="xi-star xi-x" onclick="unBookmark(('<%=memo.id %>'))"
